<resources>
    <string name="app_name">ImageGeneratorWithOpenAI</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Let\'s create an image 😍</string>
    <string name="second_fragment_label">My Image </string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="generated_image_desc">Generated imageEntity by AI</string>
    <string name="btn_share">Share</string>
    <string name="btn_like">Like</string>
    <string name="home_prompt_desc">Write a prompt for the AI to work from</string>
    <string name="enter_prompt_text">Enter prompt!</string>
</resources>