<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context=".ui.image.ImageDetailFragment">

    <TextView
        android:id="@+id/textview_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        style="@style/TextAppearance.Material3.BodyMedium"
        tools:text="Written prompt!"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_second"
        tools:src="@drawable/ic_launcher_background"
        android:contentDescription="@string/generated_image_desc" />

    <Button
        android:id="@+id/btnShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_margin="8dp"
        app:icon="@drawable/ic_share"
        android:text="@string/btn_share"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivImage" />

    <Button
        android:id="@+id/btnLike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.Button.ElevatedButton"
        app:icon="@drawable/ic_favorite"
        android:text="@string/btn_like"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivImage"
        />

    <Button
        android:id="@+id/btnSaveToGallery"
        android:layout_width="wrap_content"
        style="@style/Widget.Material3.Button.ElevatedButton"
        app:layout_constraintTop_toBottomOf="@id/ivImage"
        app:layout_constraintStart_toEndOf="@id/btnShare"
        android:layout_margin="8dp"
        android:text="Save"
        app:icon="@drawable/ic_save"
        app:layout_constraintEnd_toStartOf="@id/btnLike"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>